Changes in 1.7.3 (??.??.2011)

 - Fix focus problem when removing an unfocused modal dialog reported by Reiko here: http://irrlicht.sourceforge.net/forum/viewtopic.php?f=7&t=44358

 - Add integer template specialization for vector3d::getSphericalCoordinateAngles which rounds angles to nearest integer now.

 - Recalculate FrameRect and ScrollPos in CGUIEditBox when AbsoluteRect gets changed (thx @ serengeor for report + testcase)
 
 - Fix 'k' in bigfont.png (thx @ Scrappi for reporting)

 - fix serialization for CBillboardSceneNode, it had missed 2 color (thx for finding + patch from pc0de)

 - EMIE_MOUSE_WHEEL messages now handled correctly in several gui-element when wheel isn't just 1.0 or -1.0 (thx @ Reiko for reporting)

 - Fix problems in Textwrapping in CGUIStaticText. Did use wrong size and did ignore last word of the text (thx @ Reiko for bugreport)

 - Fix crash in collada (.dae) loading
  
 - Fix memory-leaks in example 22 MaterialViewer

 - Fix array::erase which did destroy objects more than once when used with a range (thx @ RedDragCZ for reporting + testcase).

 - Copy now all membervariables for CCameraSceneNode when cloning.

 - ICameraSceneNode::IsOrthogonal is correctly serialized and cloned now.

 - CGUIScrollBar passes unused mousemove-events now to parent element. Fixes focus-bug in ComboBox reported by REDDemon here: http://irrlicht.sourceforge.net/phpBB2/viewtopic.php?t=43474&highlight=

 - Fix clipping in CGUITabControl

 - Fix clipping in CGUITable, reported by ceyron

 - Skip bone weights and additional information in ms3d file if no joint was defined before.

 - Fix mem leak in CImage, found by mloren.

 - Fix tga writing, reported by xirtamatrix

 - Tab-positions care now about the borders correctly

 - TabControl now respositions it's tabs when setTabVerticalAlignment is changed (thx @ ceyron for reporting+testcase)
